# aarnn

./: .appveyor.yml  .clang-format  .cproject  .env  .env.example  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.disabled  .ninja_deps  .ninja_log  .project  .travis.yml  AARNN  AUTHORS  CHANGELOG  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.old  CMakeListsOLD.txt  CONTRIBUTING.md  Cargo.toml  ComposeContainers.sh  Containerfile.aarnnFullBuild  Containerfile.postgres  Containerfile.vault  Containerfile.visualiserFullBuild  Dockerfile  Dockerfile visualiserFullBuild  Dockerfile.aarnn  Dockerfile.aarnnFullBuild  Dockerfile.build  Dockerfile.cpp_builder  Dockerfile.postgres  Dockerfile.visualiser  Doxyfile  Makefile  MyREADME.md  README.md  Visualiser  aarnnServer  (+29 more)
.github/: FUNDING.yml
.github/wiki/: Home.md
.github/workflows/: c-cpp.yml  cmake.yml  cmake.yml.disabled  init-wiki.yml  mirror-to-gitlab.yml  mirror-to-gitlab.yml.disabled
.gitlab/merge_request_templates/: Hotfix.md  Release.md  Request.md
BuildFromGit/: Dockerfile.aarnnFullBuild  Dockerfile.postgres  README.md  compose.yaml  run000.sh  run001.sh  run002.sh  run003.sh  run004.sh  run005.sh  set_args.sh
BuildFromGit/ansible/: install_aws_cli.yml  install_azure_cli.yml  install_buildah.yml  install_gcp_sdk.yml  install_openstack_client.yml  install_podman.yml
BuildFromGit/docker/: Dockerfile.aarnn  Dockerfile.aarnnFullBuild  Dockerfile.build  Dockerfile.visualiserFullBuild  compose.yaml  docker-compose.yml
BuildFromGit/generic/: ComposeContainers.sh  config-postgres.yaml  init_vault.sh  setup_pulse_audio.sh  start_vault.sh  template-config.ctmpl  vault.hcl  vault_env.sh  vault_env.sh.example
BuildFromGit/kubernetes/: deployment-aarnn.yaml  deployment-postgres.yaml  deployment-registry.yaml  deployment-vault.yaml  deployment-visualiser.yaml  managemicrok8s.sh  manageminikube.sh  secret-postgres.yaml  service-postgres.yaml  service-visualiser.yaml
BuildFromGit/podman/: Containerfile.aarnn  Containerfile.aarnnarm64  Containerfile.compiler  Containerfile.compilerarm64  Containerfile.compilercloud  Containerfile.postgres  Containerfile.vault  Containerfile.vaultarm64  Containerfile.visualiser  Containerfile.visualiserarm64  Containerfile.visualisercloudarm64  compose.yaml  managepodman.sh  transferpodmanimagestok8s.sh
__DEPRECATED__/: .env  Dockerfile.aarnn  Logger.h  new.h
__DEPRECATED__/BuildFromGit/: Dockerfile.aarnnFullBuild  Dockerfile.postgres  compose.yaml
archived/: AARNN  AARNNgraphic  CMakeCache.txt  Visualiser  aarnn  aarnnClient  cmake_install.cmake
brain_classes/: neuron-parameters.cpp  position.cpp  shape3d.cpp
builda/: AARNN  CMakeCache.txt  Makefile  Visualiser  cmake_install.cmake  simulation.conf
cmake/modules/: FindFFMPEG.cmake  (+1 more)
configure/: AARNN.conf  Audio.conf  Visualiser.conf  amend_entrypoint.sh  bash_aliases.template  client.conf  db_configuration.conf  db_connection.conf  entrypoint.sh  init.sql  launch_aarnn.sh  launch_visualiser.sh  simulation.conf
doc/: aarnn copy.cpp
include/: AsyncNetworkClient.h  AsyncNetworkServer.h  AudioManager.h  AuditoryManager.h  AuditoryProcessor.h  Axon.h  AxonBouton.h  AxonBranch.h  AxonHillock.h  BladderBowelProcessor.h  BodyComponent.h  BodyShapeComponent.h  ChemoreceptionProcessor.h  Cluster.h  DB.h  Dendrite.h  DendriteBouton.h  DendriteBranch.h  Effector.h  ElectroreceptionProcessor.h  GustatoryProcessor.h  HeartbeatRespirationProcessor.h  HungerThirstProcessor.h  InteroceptiveProcessor.h  Logger.h  LustProcessor.h  MagnetoceptionProcessor.h  NetworkClient.h  NetworkServer.h  Neuron.h  NeuronParameters.h  NeuronalComponent.h  Object.h  OlfactoryProcessor.h  Position.h  PressureProcessor.h  ProcessorManager.h  ProprioceptiveProcessor.h  PruriceptionProcessor.h  PulseAudioMic.h  (+57 more)
sql/: init.sql
src/: Axon.cpp  AxonBouton.cpp  AxonBranch.cpp  AxonHillock.cpp  BodyComponent.cpp  BodyShapeComponent.cpp  CMakeLists.txt  Dendrite.cpp  DendriteBouton.cpp  DendriteBranch.cpp  Effector.cpp  Logger.cpp  Makefile  Neuron.cpp  NeuronParameters.cpp  Position.cpp  PulseAudioMic.cpp  SensoryReceptor.cpp  Set.c  Shape3D.cpp  Soma.cpp  SynapticGap.cpp  ThreadSafeQueue.cpp  aarnn  aarnn.c  aarnn.cpp  avTimerCallback.cpp  axon.cpp  axon_bouton.cpp  axon_branch.cpp  axon_hillock.cpp  body_component.cpp  brain.cpp  client.c  dendrite.cpp  dendrite_bouton.cpp  dendrite_branch.cpp  effector.cpp  files.txt  init.sql  (+11 more)
src/aarnn/: AudioManager.cpp  AuditoryManager.cpp  AuditoryProcessor.cpp  AuditorySolution.cpp  Axon.cpp  AxonBouton.cpp  AxonBranch.cpp  AxonHillock.cpp  BladderBowelProcessor.cpp  BodyShapeComponent.cpp  ChemoreceptionProcessor.cpp  Cluster.cpp  Dendrite.cpp  DendriteBouton.cpp  DendriteBranch.cpp  Effector.cpp  ElectroceptionProcessor.cpp  ElectroreceptionProcessor.cpp  GustatoryProcessor.cpp  HeartbeatRespirationProcessor.cpp  HungerThirstProcessor.cpp  InteroceptiveProcessor.cpp  LustProcessor.cpp  MagnetoceptionProcessor.cpp  NetworkClient.cpp  NetworkServer.cpp  Neuron.cpp  NeuronalComponent.cpp  OlfactoryProcessor.cpp  Position.cpp  PressureProcessor.cpp  ProcessorManager.cpp  ProprioceptiveProcessor.cpp  PruriceptionProcessor.cpp  PulseAudioMic.cpp  SatietyProcessor.cpp  SensoryReceptor.cpp  SensoryReceptorServer.cpp  Soma.cpp  SomatosensoryProcessor.cpp  (+14 more)
src/audio/: AuditoryManager.cpp  AuditoryProcessor.cpp  AuditorySolution.cpp  avTimerCallback.cpp
src/hello-world/: sphere.cpp  vtk_test.cpp
src/shared_libs/: AsyncNetworkClient.cpp  AsyncNetworkServer.cpp  Logger.cpp  utils.cpp  vclient.cpp
src/visualiser/: visualiser.cpp  visualiser.cpp.old  wss.cpp
test/: CMakeLists.txt  axon_bouton_tests.cpp  axon_branch_tests.cpp  axon_hillock_tests.cpp  axon_tests.cpp  body_component_tests.cpp  brain_tests.cpp  debug_database.sql  dendrite_bouton_tests.cpp  dendrite_branch_tests.cpp  dendrite_tests.cpp  effector_tests.cpp  neuron_tests.cpp  parameters_tests.cpp  position_tests.cpp  sensory_receptor_tests.cpp  soma_tests.cpp  synaptic_gap_tests.cpp  thread_safe_queue_tests.cpp
webviewer/: clientserver.js  package-lock.json  package.json
(+28 files in other folders)
