[package]
name = "aarnn"
version = "0.1.0"
edition = "2021"

[features]
# Enable GPU compute path via wgpu
gpu = ["wgpu", "pollster", "bytemuck", "futures-intrusive"]

[dependencies]
anyhow = "1"
thiserror = "1"
rayon = "1.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
bincode = "1"
ctrlc = "3"

# Optional GPU deps
wgpu = { version = "0.20", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1", features = ["extern_crate_std"] , optional = true }
futures-intrusive = { version = "0.5", optional = true }
